--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -8,7 +8,7 @@
           Con una formazione come Full-stack Web Developer con competenze sia nel frontend sia nel backend.
         </p>
         <div class="btn-container">
-          <button type="button" class="btn btn-custom" onclick="location.href='#scopri'">Scopri di più</button>
+          <button type="button" class="btn btn-custom" style="font-size: 15px;" onclick="location.href='#scopri'">Scopri di più</button>
         </div>
     </div>
       
@@ -23,7 +23,7 @@
     
       
       <div id="studies" class="studies">
-        <h2 style="margin-bottom: 80px; text-transform: uppercase; text-align: start;"># Who did I study with?</h2>
+        <h2 style="margin-bottom: 80px; text-transform: uppercase; text-align: start;"># Con chi ho studiato?</h2>
         <div class="row d-flex">
           <div class="studi col-sm-12 col-md-3">
             <img src="../../../assets/logo epicode.webp" alt="" width="auto">
@@ -41,12 +41,10 @@
               puoi vedere le mie certificazioni <a (click)="navigateToCertifications()" style="color: #04E762;">qui</a>
           </h6>
       </div>
-   
-
-      </div>
+    </div>
       
       <div id="languages" class="languages" style="margin-top: 150px; margin-bottom: 150px;">
-        <h2 style="text-transform: uppercase; text-align: start; margin-bottom: 100px;"># I linguaggi e gli strumenti che uso sono</h2>
+        <h2 style="text-transform: uppercase; text-align: start;;"># I linguaggi e gli strumenti che uso sono</h2>
         <p>
           Per il <span style="color: #8752dd;">frontend</span> utilizzo <span style="color: #8752dd;">HTML</span>, <span style="color: #8752dd;">CSS</span> e <span style="color: #8752dd;">JavaScript</span> per sviluppare siti accattivanti e con <span style="color: #8752dd;">Angular</span>, creo applicazioni web modulari e responsive. Per il <span style="color: #8752dd;">backend</span>, lavoro con <span style="color: #8752dd;">Java</span> e <span style="color: #8752dd;">Spring Boot</span> per creare applicazioni con un linguaggio di programmazione solido, versatile e modulare. Per la gestione del <span style="color: #8752dd;">database</span>, utilizzo <span style="color: #8752dd;">PostgreSQL</span>. Questo stack tecnologico mi consente di creare soluzioni web complete <span style="color: #8752dd;">full-stack</span>, che coprono tutto, dalla progettazione alla gestione dei dati.      
         </p>
@@ -115,17 +113,18 @@
       </div>
 
 
+<!-- cosa faccio -->
 
       <div id="works" class="works" style="margin-bottom: 150px;">
-        <h2 style="text-transform: uppercase; margin-top: 30px; margin-bottom: 100px;"># Cosa faccio</h2>
+        <h2 style="text-transform: uppercase; margin-top: 30px;"># Cosa faccio</h2>
 
-        <p style="margin-bottom: 70px;">
-          Creo siti web responsive che si adattano a vari dispositivi, che si tratti di siti vetrina, landing page efficaci e mirate o siti web complessi con soluzioni personalizzate. Offro anche servizi di sviluppo di e-commerce e gestione aziendale. </p>
+        <p style="margin-bottom: 40px;">
+          Creo <span style="color: #8752dd;">siti web responsive</span> che si adattano a vari dispositivi, che si tratti di siti vetrina, landing page efficaci e mirate o siti web complessi con soluzioni personalizzate. Offro anche servizi di <span style="color: #8752dd;">sviluppo di e-commerce e gestionali</span>. </p>
         <p>
           Un <span class="portfolio" style="color: #8752dd; margin-bottom: 100px;">portfolio</span> dei miei progetti e lavori:
         </p>
         
-        <div class="progetti projects-wrapper row flex-nowrap" style="margin-bottom: 50px;">
+        <div class="progetti projects-wrapper row flex-nowrap" style="margin-bottom: 50px; text-align: center;">
           <div class="col-12 col-md-3 project">
             <h4>EG. Sito vetrina</h4>
             
