--- a/src/app/component/works/works.component.html
+++ b/src/app/component/works/works.component.html
@@ -6,46 +6,18 @@
     </div>
 
     <p class="text-start">Qui troverete una selezione di lavori che spaziano tra esperienze accademiche e progetti realizzati in contesti lavorativi. </p>
-        <p class="text-start mb-4">Questa raccolta rappresenta i miei primi passi nel mondo dello sviluppo e del design ed ognuno di questi progetti rappresenta una tappa del mio percorso di crescita professionale.</p>
-        <div class="project-menu-list">
-            <div class="project-menu-item">
-                <div class="project-menu-info">
-                    <span class="project-menu-name">Enrico Gasparri</span>
-                    <button class="btn btn-arrow" onclick="location.href='#enrico'">
-                        <i class="bi bi-arrow-right"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="project-menu-item">
-                <div class="project-menu-info">
-                    <span class="project-menu-name">Matrimonio</span>
-                    <button class="btn btn-arrow" onclick="location.href='#matrimonio'">
-                        <i class="bi bi-arrow-right"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="project-menu-item">
-                <div class="project-menu-info">
-                    <span class="project-menu-name">Todo</span>
-                    <button class="btn btn-arrow" onclick="location.href='#todo'">
-                        <i class="bi bi-arrow-right"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="project-menu-item">
-                <div class="project-menu-info">
-                    <span class="project-menu-name">DonaTo</span>
-                    <button class="btn btn-arrow" onclick="location.href='#donato'">
-                        <i class="bi bi-arrow-right"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-        
 
-<!-- Projects Section -->
+        <p class="text-start mb-4">Questa raccolta rappresenta i miei primi passi nel mondo dello sviluppo e del design ed ognuno di questi progetti rappresenta una tappa del mio percorso di crescita professionale.</p>
+        
+        <!-- <a href="#enrico">Enrico Gasparri</a>
+        <a href="#matrimonio">Matrimonio</a>
+        <a href="#todo">Task app</a>
+        <a href="#donato">Donato</a>
+         -->
+
+
+    <!-- enrico gasparri -->
 <div id="enrico" class="projects-menu">
-    <!-- Project 1 -->
     <div class="project-item">
         <h2>// Enrico Gasparri</h2>
         <span class="badge badge-custom">Sito vetrina</span>
@@ -89,7 +61,7 @@
         <div class="row d-flex" style="margin-bottom: 60px;  justify-content: center; align-items: center;">
             <p style="text-align: start;">Il sito include anche una serie di funzionalità pensate per migliorare l'esperienza utente.</p>
             <div class="col-sm-12 col-md-6 col-lg-6 mb-3" style="text-align: start;">
-                <ul>
+                <ul class="custom-list">
                    <li>Uno spinner di caricamento garantisce che l'utente possa visualizzare lo stato di caricamento.</li>
                    <li>Un form di contatto intuitivo e facile da usare, che permette agli utenti di entrare direttamente in contatto.</li>
                    <li>Delle slideshow per alleggereri il carico visivio date le numerose foto.</li>
@@ -177,7 +149,7 @@
 
     </div>
 
-    <!-- Project 2 -->
+    <!-- matrimonio -->
     <div id="matrimonio" class="project-item">
         <h2>// Wedding D+G</h2>
         <span class="badge badge-custom">Web app</span>
@@ -401,7 +373,7 @@
         
         <div class="d-flex justify-content-center align-items-center mt-3" style="margin-bottom: 100px;">
             <div class="text-center">
-                <a href="https://github.com/project-link" class="btn btn-custom">Vedi su GitHub</a>
+                <a href="https://github.com/project-link" class="btn btn-custom-static">Vedi su GitHub</a>
             </div>
         </div>
 
