--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="container scroll-section">
         <h1 style="text-align: center;">SONO UNO<br> <span style="color: #8752dd;">JUNIOR WEB DEVELOPER</span> <br> DI BASE A TORINO.</h1>
         <p style="margin-top: 5px; text-align: center;">
-          Con una formazione come Full-stack Web Developer con competenze sia nel frontend sia nel backend.
+          Con una formazione come Full-stack con competenze frontend e backend.
         </p>
         <div class="btn-container">
           <button type="button" class="btn btn-custom" style="font-size: 15px;" onclick="location.href='#scopri'">Scopri di più</button>
