--- a/src/app/component/works/works.component.html
+++ b/src/app/component/works/works.component.html
@@ -136,10 +136,10 @@
         <div class="d-flex justify-content-center align-items-center mt-3" style="margin-bottom: 100px;">
             <div class="text-center row d-flex">
                 <div class="col-6">
-                    <a href="https://portfolioenricogasparri.web.app" target="_blank" class="btn btn-custom-static">Vedi su GitHub</a>
+                    <a href="https://github.com/project-link" target="_blank" class="btn btn-custom-static">Vedi su GitHub</a>
                 </div>
                 <div class="col-6">
-                    <a href="https://github.com/project-link" target="_blank" class="btn btn-custom-git">Visita il sito</a>
+                    <a href="https://enricogasparri.com" target="_blank" class="btn btn-custom-git">Visita il sito</a>
                 </div>
             </div>
         </div>
@@ -159,9 +159,12 @@
         </p>
         <div class="badge-group">
             <span class="badge badge-tech angular">Angular</span>
+            <span class="badge badge-tech htm">Html</span>
+            <span class="badge badge-tech css">Css</span>
+            <span class="badge badge-tech javascript">JavaScript</span>
             <span class="badge badge-tech java">Java</span>
-            <span class="badge badge-tech mysql">PostgreSQL</span>
-            
+            <span class="badge badge-tech springboot">Spring Boot</span>
+            <span class="badge badge-tech postgresql">PostgreSQL</span>
         </div>
 
         <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
@@ -240,7 +243,7 @@
                 <img src="../../../assets/matrimonio/7.png" alt="" width="100%">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
-                <video width="35%" loop autoplay muted>
+                <video width="35%" loop autoplay muted >
                     <source src="../../../assets/aggiungi.mp4" type="video/mp4">
                         Il tuo browser non supporta il video.
                 </video>
@@ -319,19 +322,20 @@
     <div id="todo" class="project-item">
         <h1>Todo List</h1>
         <span class="badge badge-custom">Project</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, distinctio.</p>
+        <p>Questa piccola web-app è stata uno dei primi consistenti progetti d'esame sviluppati nel corso della formazione con Epicode.</p>
         <div class="badge-group">
             <span class="badge badge-tech angular">Angular</span>
-            <span class="badge badge-tech css">CSS</span>
+            <span class="badge badge-tech java">Html</span>
+            <span class="badge badge-tech css">Css</span>
             <span class="badge badge-tech javascript">JavaScript</span>
         </div>
 
-        <div class="row d-flex" style="margin-bottom: 60px;">
+        <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
             <div class="col-sm-12 col-md-6 col-lg-6">
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto reiciendis ducimus similique dignissimos, id doloribus voluptates dolores nemo consequuntur quaerat explicabo expedita! Autem eligendi accusamus, nobis consequuntur aliquam nesciunt?</p>
+               <p>Partendo dalla richiesta, sono state sviluppate le seguenti sezioni: lista di task, task completati task ancora da completare e sezione con gli utenti.</p>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6">
-                <img src="../../../assets/todo/all.png" alt="" width="100%">
+                <img src="../../../assets/todo/consegna.png" alt="" width="100%">
             </div>
 
         </div>
@@ -352,28 +356,38 @@
 
         <div class="row d-flex" style="margin-bottom: 60px;">
             <h3>Alcune funzionalità</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas molestiae obcaecati expedita! Nisi, enim tempora rem veritatis repudiandae deserunt eaque, delectus esse minus voluptatibus, non modi repellendus at eveniet!</p>
+            <p style="margin-bottom: 100px;">Rispetto alla consegna iniziale, ho personalizzato un po' l'estetica e alcune funzionalità. Tra queste vi è anche l'eliminazione del task.</p>
             
-            <div class="col-sm-12 col-md-6 col-lg-6">
-               <p>Quando si flagga il campo Completed e viceversa, viene visualizzato un btn per confermare. Al click il task viene spostato.</p>
+            <div class="row d-flex" style="margin-bottom: 100px; justify-content: center; align-items: center;">
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <p>Quando si flagga il campo Completed e viceversa, viene visualizzato un btn per confermare. Al click il task viene spostato.</p>
+                 </div>
+                 <div class="col-sm-12 row-col-md-6 col-lg-6 mb-3" style="margin-bottom: 30px; text-align: center;">
+                     <img src="../../../assets/todo/sposta.png" alt="" width="100%">
+                 </div>
+     
             </div>
-            <div class="col-sm-12 row-col-md-6 col-lg-6 mb-3" style="margin-bottom: 30px;">
-                <img src="../../../assets/todo/sposta.png" alt="" width="100%">
+         
+            <div class="row d-flex" style="margin-bottom: 40px;  justify-content: center; align-items: center;">
+                <div class="col-sm-12 col-md-6 col-lg-6 mb-3" style="text-align: center;">
+                    <img src="../../../assets/todo/bordi.png" alt="" width="80%">
+                 </div>
+                 <div class="col-sm-12 row-col-md-6 col-lg-6">
+                    <p>Quando tutti i task di uno user sono flaggati il bordo della card si colora di verde.</p>
+                 </div>
             </div>
+           
 
-            <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
-                <img src="../../../assets/todo/bordi.png" alt="" width="80%">
-             </div>
-             <div class="col-sm-12 row-col-md-6 col-lg-6">
-                <p>Quando tutti i task di uno user sono flaggati il bordo della card si colora di verde.</p>
-             </div>
+             <p>
+                Avendoci preso gusto, avevo iniziato ad implementare la funzione aggiuntiva della barra di ricerca e una sezione per visualizzare i dettagli del task.
+             </p>
            
 
         </div>
         
         <div class="d-flex justify-content-center align-items-center mt-3" style="margin-bottom: 100px;">
             <div class="text-center">
-                <a href="https://github.com/project-link" class="btn btn-custom-static">Vedi su GitHub</a>
+                <a href="https://github.com/MassimilianoDallaMura/taskapp" target="_blank" class="btn btn-custom-static">Vedi su GitHub</a>
             </div>
         </div>
 
@@ -386,21 +400,28 @@
     <div id="donato" class="project-item" style="margin-bottom: 60px;">
         <h2>DonaTo</h2>
         <span class="badge badge-custom">Webapp</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, distinctio.</p>
+        <p>DonaTo è molte cose, tra le quali il capstone realizzato a fine corso Epicode, ovvero un progetto personale, progettato e sviluppato da zero, con il quale dare sfogo a tutto ciò che avevo appreso nei sei mesi di formazione.
+
+        </p>
         <div class="badge-group">
-            <span class="badge badge-tech python">Python</span>
+            <span class="badge badge-tech angular">Angular</span>
+            <span class="badge badge-tech html">Html</span>
+            <span class="badge badge-tech css">Css</span>
+            <span class="badge badge-tech javascript">JavaScript</span>
             <span class="badge badge-tech java">Java</span>
-            <span class="badge badge-tech mysql">MySQL</span>
+            <span class="badge badge-tech springboot">Spring Boot</span>
+            <span class="badge badge-tech postgresql">PostgreSQL</span>
+
         </div>
 
     
 
-        <p style="margin-bottom: 50px;">Lore Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae corporis repellat molestiae quae numquam natus quis dicta ullam enim, hic molestias architecto dolore maxime libero vitae labore? Magnam, possimus fugiat!m ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto reiciendis ducimus similique dignissimos, id doloribus voluptates dolores nemo consequuntur quaerat explicabo expedita! Autem eligendi accusamus, nobis consequuntur aliquam nesciunt?</p>
+        <p style="margin-bottom: 50px;">DonaTO vuole automatizzare un fenomeno sempre più diffuso, quello dello "stooping", automatizzarlo e conivolgere in maniera più ampia i soggetti istituzionali che si occupano della raccolta dei rifiuti ingombranti: è possibile infatti segnalare e caricare oggetti abbandonati o in attesa di essere raccolti e smaltiti, comunicare con i proprietari degli oggetti, salvarli tra i preferiti e visualizzare su mappa dove sono gli oggetti.</p>
 
 
-        <div class="row d-flex" style="margin-bottom: 60px;">
+        <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
             <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto reiciendis ducimus similique dignissimos, id doloribus voluptates dolores nemo consequuntur quaerat explicabo expedita! Autem eligendi accusamus, nobis consequuntur aliquam nesciunt?</p>
+               <p>L'applicazione si basa su frontend e backend e memorizza tutti i dati in un database. Prevede una fase di registrazione e login, operazione gestita con JWT, a seguito della quale è possibile avere accesso alle sezioni della web-app.</p>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 mb-3" style="text-align: center;">
                 <img src="../../../assets/donato/1.png" alt="" width="35%">
@@ -448,6 +469,7 @@
         
             <button type="button" class="btn btn-custom" style="margin-top: 30px;" onclick="location.href='/contacts'">Contattami</button>
         </div>
+    
         
 
         
